opam-version: "1.2"
version: "0.0.1"
maintainer: "andro.from@gmail.com"
authors: ["Andreas Halkjær From"]
homepage: "https://github.com/andreasfrom/prettiest"
bug-reports: "https://github.com/andreasfrom/prettiest/issues"
dev-repo: "https://github.com/andreasfrom/prettiest.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only" "prettiest" "--root" "." "-j" jobs "@install"]
]
