opam-version: "1.2"
version: "0.0.1"
maintainer: "andro.from@gmail.com"
authors: ["Andreas Halkjær From"]
homepage: "https://github.com/andreasfrom/prettiest"
bug-reports: "https://github.com/andreasfrom/prettiest/issues"
dev-repo: "https://github.com/andreasfrom/prettiest.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "base"
  "ppx_compare"
  "ocaml-migrate-parsetree"
]
descr: "
Implementation of Jean-Philippe Bernardy's A Pretty But Not Greedy Printer (Functional Pearl). PACMPL 1(ICFP): 6:1-6:21 (2017)(https://jyp.github.io/pdf/Prettiest.pdf).
"
